600-OpenHab/20-openhab-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openhab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openhab
  template:
    metadata:
      labels:
        app: openhab
    spec:
      containers:
      - name: openhab
        image: openhab/openhab:2.5.1
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 8101
          name: console
          protocol: TCP
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
        - name: openhab-conf
          mountPath: /openhab/conf
          readOnly: false
        - name: openhab-userdata
          mountPath: /openhab/userdata
          readOnly: false
        - name: openhab-addons
          mountPath: /openhab/addons
          readOnly: false
        - name: openhab-java
          mountPath: /openhab/.java
          readOnly: false
        - name: openhab-karaf
          mountPath: /openhab/.karaf
          readOnly: false
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
      - name: openhab-conf
        persistentVolumeClaim:
          claimName: openhab-conf
      - name: openhab-userdata
        persistentVolumeClaim:
          claimName: openhab-userdata
      - name: openhab-addons
        persistentVolumeClaim:
          claimName: openhab-addons
      - name: openhab-java
        persistentVolumeClaim:
          claimName: openhab-java
      - name: openhab-karaf
        persistentVolumeClaim:
          claimName: openhab-karaf
      terminationGracePeriodSeconds: 300
